# embassy-ledeffects

./: 2  Cargo.toml  Embed.toml  do.sh  readme.md
.cargo/: config.toml
examples/: comets.rs  one_colour.rs  panel_buttons.rs  random.rs  strip_buttons.rs
src/: button.rs  effect.rs  lib.rs  main.rs  strip.rs
src/effect/: colours.rs  comets.rs  fire.rs  fire_grid.rs  off.rs  one_colour.rs  random.rs  wheel.rs
