
[package]
edition = "2024"
name = "embassy-ledeffects"
version = "0.1.0"
license = "MIT or Apache-2.0"

[features]
button = []
random = ["colours"]
wheel = []
onecolour = []
fire = []
firegrid = ["fire"]
colours = []
comets = []

[[example]]
name = "random"
required-features = ["random"]

[[example]]
name = "comets"
required-features = ["comets"]

[[example]]
name = "one_colour"
required-features = ["onecolour", "colours"]

[[example]]
name = "strip_buttons"
required-features = [
    "button",
    "random",
    "wheel",
    "onecolour",
    "fire",
    "comets",
    "colours",
]

[[example]]
name = "panel_buttons"
required-features = [
    "button",
    "random",
    "wheel",
    "onecolour",
    "firegrid",
    "colours",
]

[build-dependencies]
regex = "1.11.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
defmt = "1"
defmt-rtt = "1"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
smart-leds = "0.4.0"
embassy-sync = { git = "https://github.com/embassy-rs/embassy", version = "0.7.2", features = [
    "defmt",
] }
heapless = { version = "0.9.2", features = ["defmt"] }

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

[target."thumbv8m.main-none-eabihf".dependencies]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
